--- a/styles/main.css
+++ b/styles/main.css
@@ -61,10 +61,6 @@
     font-size: 24px;
 }
 
-.task {
-    
-}
-
 .task-date {
     justify-self: start;
     width: 5em;
